@@ -953,7 +953,7 @@ Festival and FestVox.
           AudioPlayer</a> for a voice.  You can also set the
           default AudioPlayer via the command line by defining the
           "com.sun.speech.freetts.voice.defaultAudioPlayer" system
-          property.  The value of this property should be the name of
+          property.  The value of this property must be the name of
           a class that implements the AudioPlayer interface, and which
           also has a no-arg constructor.</li><br>
       <li><a href="../javadoc/com/sun/speech/freetts/jsapi/FreeTTSVoice.html#getVoice()">
